--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -37,8 +37,10 @@
                             <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
                         </div>
                     </div>
-                     <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                      <div class="row" align="center">    
+                         <td><a class="btn btn-danger" id="generar">PDF</a></td>
+                         <td><a class="btn btn-success" id="excel">EXCEL</a></td>
+
                     </div>
                 </form>
             </div>
