--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
@@ -47,11 +47,11 @@ where m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechare
 	<pageHeader>
 		<band height="84" splitType="Stretch">
 			<staticText>
-				<reportElement x="348" y="48" width="88" height="17" uuid="f98b7b1e-294d-401d-8ef0-6ac3d1933508"/>
+				<reportElement x="332" y="48" width="114" height="17" uuid="f98b7b1e-294d-401d-8ef0-6ac3d1933508"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Misiones Exteras 1]]></text>
+				<text><![CDATA[Reporte Misiones Exteras 1]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="67" y="69" width="100" height="15" uuid="522ea680-0a38-4d57-85e4-bb346b7b2e98"/>
@@ -75,28 +75,28 @@ where m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechare
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="296" y="66" width="33" height="17" uuid="d2a16912-a733-4300-b665-c62c612d284b"/>
+				<reportElement x="291" y="66" width="33" height="17" uuid="d2a16912-a733-4300-b665-c62c612d284b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="389" y="67" width="33" height="17" uuid="6a48e812-19ca-4c11-9e30-ddf45777dfbc"/>
+				<reportElement x="384" y="67" width="33" height="17" uuid="6a48e812-19ca-4c11-9e30-ddf45777dfbc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="324" y="66" width="56" height="17" uuid="157d6ca8-db16-4416-a40c-9681b080f868"/>
+				<reportElement x="319" y="66" width="56" height="17" uuid="157d6ca8-db16-4416-a40c-9681b080f868"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="417" y="66" width="57" height="17" uuid="965e147f-6e74-408c-8aba-1514c8fcb4f0"/>
+				<reportElement x="412" y="66" width="57" height="17" uuid="965e147f-6e74-408c-8aba-1514c8fcb4f0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
