--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -19,12 +19,16 @@
 				<br>
 			
 
-                <form class="form-horizontal" id="formbeneficio">
+                <form class="form-horizontal" id="formbeneficio" th:object="${empleados}">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                        <label class="col-sm-3 control-label" >Empleado:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
+                              <select class="form-control" id="codigo" name="codigo"  >
+                                  <option value="0">-- Seleccione un Empleado --</option>
+                                <option  th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}+', '+${c.apellidoempleado}"></option>
+                            </select>
                         </div>
                     </div>
                      <div class="form-group">    
@@ -53,14 +57,20 @@
 <script>
     $(document).ready(function () {
         $('#fechainicial').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd-mm-yy'
         });
 
         $('#fechafinal').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd-mm-yy'
         });
         $('#generar').click(function(){
             $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("form#formbeneficio").submit();
+            
+        });
+        
+         $('#excel').click(function(){
+         $("#formbeneficio").attr('action', '../beneficiosexel');
             $("form#formbeneficio").submit();
             
         });
